Prototype sequencer